mopidy-spotify (1.0.1-0mopidy2) UNRELEASED; urgency=low

  * Add python-setuptools to Build-Depends.
  * Convert from python-support to dh_python2.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Wed, 30 Oct 2013 19:38:09 +0100

mopidy-spotify (1.0.1-0mopidy1) unstable; urgency=low

  * Initial release

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 28 Oct 2013 21:26:43 +0100